# recipe_db_graphql

./: Cargo.toml  README.md
data/: recipes.json
src/: load_recipes.rs  main.rs
