[package]
name = "recipe_db_graphql"
version = "0.1.0"
authors = ["aa026831"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
mongodb = "2.0.0-alpha"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0"}
juniper = { version = "0.15.4" }
juniper_codegen = "0.15.4"
actix-web = "4.0.0-beta"
actix-cors = "0.4.0"
env_logger = "0.8"
log = "0.4"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "recipe_loader"
path = "src/load_recipes.rs"